pg user and password are added to db.yml

--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,11 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>  
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %> 
+  port: 5432
+  host: localhost
+  user: postgres
+  password: postgres
 
 development:
   <<: *default
