Fix rubocop warnings, add vecancy model

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -18,5 +18,12 @@ Style/StringLiterals:
 Rails/FilePath:
   EnforcedStyle: arguments
 
+Rails/Rspec/InferredSpecType:
+  Enabled: false
+
+Layouts/LineLength:
+  Exclude:
+    - "config/initializers/devise.rb"
+
 Metrics/BlockLength:
   AllowedMethods: ['describe', 'context']
