--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -19,10 +19,10 @@ Style/StringLiterals:
 Rails/FilePath:
   EnforcedStyle: arguments
 
-Rails/Rspec/InferredSpecType:
+RSpec/Rails/InferredSpecType:
   Enabled: false
 
-Layouts/LineLength:
+Layout/LineLength:
   Exclude:
     - "config/initializers/devise.rb"
 
