added show of flash message in application.html

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -20,6 +20,9 @@ Style/StringLiterals:
   Enabled: true
   EnforcedStyle: double_quotes
 
+Style/HashLikeCase:
+  Enabled: false
+
 Rails/FilePath:
   EnforcedStyle: arguments
 
